adding the env.sample

--- a/installations/env.sample
+++ b/installations/env.sample
@@ -6,5 +6,5 @@ API_DB_MYSQL_WRITE_HOST=localhost
 API_DB_MYSQL_WRITE_PASS={db password}
 API_DB_MYSQL_WRITE_USER={db username}
 API_DOMAIN=localhost
-SESSION_SECRET=ziniosS3551onS3cr3t
+SESSION_SECRET={yoursecrectkey}
 API_PORT=9601
